# nebula

./: .clang-format  .gitignore  CMakeLists.txt  CODEOWNERS  CODE_GUIDELINES.md  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  pre-commit
.github/workflows/: clang.yaml  clang_ci.yaml  g++.yaml  main_ci.yaml  stability.yaml
app/: main.cpp
ci/: config_clang.sh  config_env.sh  config_gcc.sh
docs/: evaluatedocumentation.tex  gates.tex  guidelines.tex  persistence_deadlines.tex  persistence_docs.tex  sad.tex  techdoc.tex  windowing_deadlines.tex
scripts/: config_env.sh
shaders/: default.frag  grid.frag  grid.vert  passthrough.vert  port.frag  uv.frag  uv.vert  wire.frag
src/: main.cpp  tmp.cpp  types.hpp
src/components/: camera.cpp  camera.hpp
src/core/: error.hpp  handle.hpp  input.hpp  types.hpp
src/evaluator/: evaluator.cpp  evaluator.hpp
src/execution/: ANDGate.cpp  ANDGate.hpp  Clock.cpp  Clock.hpp  Gate.hpp  NANDGate.cpp  NANDGate.hpp  NORGate.cpp  NORGate.hpp  NOTGate.cpp  NOTGate.hpp  ORGate.cpp  ORGate.hpp  XNORGate.cpp  XNORGate.hpp  XORGate.cpp  XORGate.hpp  test.cpp
src/logging/: logging.cpp  logging.hpp
src/model/: fwd.hpp  gate.cpp  gate.hpp  model.cpp  model.hpp  port.cpp  port.hpp
src/persistence/: persistence.cpp  persistence.hpp
src/rendering/: framebuffer.cpp  framebuffer.hpp  opengl.cpp  opengl.hpp  rendering.cpp  rendering.hpp  shader.cpp  shader.hpp  vertex.hpp
src/shaders/: compiler.cpp  compiler.hpp
src/ui/: gate.cpp  gate.hpp  movable_gate.cpp  movable_gate.hpp  movable_rect.cpp  movable_rect.hpp  node_rect.cpp  node_rect.hpp  port.cpp  port.hpp  scene.cpp  scene.hpp  ui.cpp  ui.hpp  viewport.cpp  viewport.hpp  window.cpp  window.hpp
src/windowing/: camera.cpp  camera.hpp  window.cpp  window.hpp
